--- a/NamedPipe/CPipe/CPipe/CPipe.vcxproj.filters
+++ b/NamedPipe/CPipe/CPipe/CPipe.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="..\CPipe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WinPipe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="WinPipe.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
